--- a/css/styles.css
+++ b/css/styles.css
@@ -111,3 +111,24 @@ body
 .gild {
     background-color: #1aff00;
 }
+
+#sort {
+    cursor: pointer;
+    display: inline-block;
+    height: 0;
+    margin-left: 10px;
+    width: 0;
+}
+
+.arrow-up {
+    border-bottom: 10px solid white;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+
+}
+
+.arrow-down {
+    border-top: 10px solid white;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+}
