--- a/css/styles.css
+++ b/css/styles.css
@@ -10,12 +10,7 @@ body
 
 *
 {
-    -webkit-touch-callout:none;
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    -khtml-user-select:none;
-    user-select:none;
+
 }
 
 #import {
@@ -50,6 +45,8 @@ body
     clear:both;
     border-bottom:1px solid rgba(200,200,255,0.1);
     padding:5px 10px;
+
+
 }
 
 .cost
@@ -69,10 +66,15 @@ body
     width: 120px;
 }
 
-/*#heroes li:hover*/
-/*{*/
-    /*background-color:rgba(200,200,255,0.2);*/
-/*}*/
+#heroes li
+{
+    -webkit-touch-callout:none;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    -khtml-user-select:none;
+    user-select:none;
+}
 
 #input {
     overflow: hidden;
