--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ body
     display: none;
 }
 
-#heroes li, #autoDegild, #speed
+#heroes li, #autoDegilding, #autoDegild, #speed
 {
     -webkit-touch-callout:none;
     -webkit-user-select:none;
@@ -123,7 +123,15 @@ body
     border-right: 5px solid transparent;
 }
 
-#autoDegild:hover, #speed:hover {
+#autoDegilding:hover, #speed:hover {
+    background-color: rgba(200,200,255,0.2);
+}
+
+#autoDegild {
+    display: none;
+}
+
+#autoDegild:hover {
     background-color: #1aff00;
 }
 
@@ -133,4 +141,83 @@ body
 
 #speed {
     display:none;
+}
+
+
+.slider-range {
+    display: none;
+    margin: 15px 0 10px 0;
+}
+
+.noUi-horizontal {
+    height: 10px;
+}
+
+.noUi-horizontal .noUi-handle {
+    height: 20px;
+}
+
+.noUi-handle:after, .noUi-handle:before {
+    top: 3px;
+    left: 4px;
+}
+
+.noUi-horizontal .noUi-handle {
+    left: -8px;
+    width: 16px;
+}
+
+.noUi-handle:after {
+    left: 9px;
+}
+
+.slider-range:hover .tooltip {
+    display: block;
+    -webkit-animation: fadein 0.3s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 0.3s; /* Firefox < 16 */
+    -ms-animation: fadein 0.3s; /* Internet Explorer */
+    -o-animation: fadein 0.3s; /* Opera < 12.1 */
+    animation: fadein 0.3s;
+}
+
+.tooltip {
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.6);
+    border: 1px solid #777;
+    border-radius: 5px;
+    color: #fff;
+    display: none;
+    font: bold 12px/12px Arial;
+    left: -18px;
+    padding: 5px;
+    position: absolute;
+    text-align: center;
+    top: -33px;
+    width: 50px;
+}
+.tooltip strong {
+    display: block;
+    padding: 2px;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
