--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ a {
     display: none;
 }
 
-#heroes li, #autoDegilding, #autoDegild, #speed, #resetSlider
+#heroes li, #autoDegilding, #autoDegild, #speedFaster, #speedSlower, #resetSlider, #reset
 {
     -webkit-touch-callout:none;
     -webkit-user-select:none;
@@ -128,7 +128,7 @@ a {
     border-right: 5px solid transparent;
 }
 
-#autoDegilding:hover, #speed:hover, #reddit:hover, #resetSlider:hover {
+#autoDegilding:hover, #speedFaster:hover, #speedSlower:hover, #reddit:hover, #resetSlider:hover, #reset:hover {
     background-color: rgba(200,200,255,0.2);
 }
 
@@ -144,7 +144,7 @@ a {
     background-color: #ff0000 !important;
 }
 
-#speed, #resetSlider {
+#speedFaster, #speedSlower, #resetSlider, #degildsPerSecond {
     display:none;
 }
 
