fixed transport click

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -145,6 +145,10 @@ a {
     justify-content: space-between;
 }
 
+#transport span {
+    display: inline-block;
+}
+
 #editPriorities:hover, #speedFaster:hover, #speedSlower:hover, #reddit:hover, #resetSlider:hover, #reset:hover, #export:hover {
     background-color: rgba(200,200,255,0.2);
 }
